<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="16dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/logins"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            android:text="@string/username"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fname">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=" "
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lname">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/password"
                android:scrollbarSize="25dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/reg_pass"
                    android:layout_alignParentEnd="true"
                    android:autofillHints=" "
                    android:background="@drawable/edit_text_bg_selector"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/rl5"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/logins"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_button"
            android:layout_marginBottom="10dp"
            android:text="@string/do_not_have_account"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </RelativeLayout>

</RelativeLayout>