<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="16dp"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.Constraints
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp">

        </androidx.constraintlayout.widget.Constraints>

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/fname"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fname">

        </RelativeLayout>

        <TextView
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_fname"
            android:layout_marginTop="10dp"
            android:text="@string/lname"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lname">

        </RelativeLayout>

        <TextView
            android:id="@+id/reg_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_reg_username"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_pass">


        </RelativeLayout>

        <TextView
            android:id="@+id/reg_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_lname"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#a8a8a8"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:id="@+id/rl6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <Button
            android:id="@+id/btn_reg_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="52dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/et_reg_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/reg_username"
            android:layout_marginTop="10dp"
            android:autofillHints=" "
            android:background="@drawable/edit_text_bg_selector"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/pass_tb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/reg_pass"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg_selector"
            android:scrollbarSize="25dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"

            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/reg_pass"
                android:layout_alignParentEnd="true"
                android:autofillHints=" "
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lname"
            android:layout_marginTop="10dp"
            android:autofillHints=" "
            android:background="@drawable/edit_text_bg_selector"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


        <EditText
            android:id="@+id/et_fname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/fname"
            android:layout_marginTop="10dp"
            android:autofillHints=" "
            android:background="@drawable/edit_text_bg_selector"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>