<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_drawer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:padding="15dp"
            android:src="@drawable/list" />

        <TextView
            android:id="@+id/profName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/img_profile"
            android:layout_toRightOf="@id/img_drawer"
            android:text="Name goes here"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/profile"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="1dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/toggleOnline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/rel_teacher_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Present Students"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/student_view_present"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_students"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimary" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/student_view_absent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/toggle"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:id="@+id/codeText"
                        android:text="@string/Offline"
                        android:layout_marginEnd="20dp"/>


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_student_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/before_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/rel_cource_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/caurce_background"
                        android:padding="10dp">

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rel_code_enter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_cource_name"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/color_backgroun_card"
                        android:paddingTop="50dp"
                        android:paddingBottom="50dp">

                        <TextView
                            android:id="@+id/txt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/enter_code"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/et_code"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt1"
                            android:layout_centerHorizontal="true"
                            android:inputType="number" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rel_add_course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_code_enter"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/edit_text_normal_bg"
                        android:paddingTop="50dp"
                        android:paddingBottom="50dp">

                        <TextView
                            android:id="@+id/txt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/add_course"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/et_prof_txt"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt2"
                            android:layout_centerHorizontal="true"
                            android:inputType="textEmailAddress" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rel_notice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_add_course"
                        android:layout_margin="5dp"
                        android:background="@drawable/caurce_background"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/you_must_be_at_brock_university_to_attend_the_class"
                            android:textColor="@color/colorPrimary" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/after_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/text_for_student"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/color_backgroun_card"
                        android:backgroundTint="@color/colorGreen"
                        android:text="Present"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/go_back"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@id/text_for_student"
                        android:layout_marginTop="100dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_selector"
                        android:gravity="center"
                        android:paddingBottom="3dp"
                        android:text="@string/goback"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>